# depowdering

./: .gitmodules  README.md
blackbox/: CMakeLists.txt  package.xml
blackbox/cfg/: Blackbox.cfg  blackbox.cfg
blackbox/include/central_processor/: central_processor.h  central_processor.h.backup  processor_const.h
blackbox/launch/: bayes_filter_only.launch  bayes_filter_test.launch  blackbox.launch  blackbox_auxillary.launch  trajectory_visualizer.launch
blackbox/msg/: Trajectory.msg
blackbox/nodes/: blackbox_auxillary.py  show_trajectory.py
blackbox/rviz/: buildbox.rviz
blackbox/src/blackbox/: blackbox.cpp
blackbox/src/central_processor/: central_processor.cpp  central_processor.cpp.backup
blackbox/srv/: BayesFilter.srv
blackbox/tests/: depowdering_simulator.py
blackbox/yaml/: bayes_filter.yaml  blackbox.yaml
cam_kinect/: CMakeLists.txt  package.xml
cam_kinect/data/: data_surface.txt
cam_kinect/launch/: cam_kinect.launch  cam_playback.launch
cam_kinect/nodes/: ar_marker_filter.py  file_parser.py  pseudo_point_cloud_sender.py
cam_kinect/src/cam_kinect/: cam_kinect.cpp
cam_kinect/srv/: CamCalibrate.srv  FetchOneFrame.srv  PlaybackFrame.srv  SaveCloud.srv  SendPseudoCloud.srv
cam_kinect/yaml/: cam_kinect.yaml
depowdering_bringup/: CMakeLists.txt  package.xml
depowdering_bringup/launch/: depowdering.launch  perception_test.launch
robot_interface/: CMakeLists.txt  package.xml
robot_interface/cfg/: RobotInterface.cfg
robot_interface/launch/: robot_interface.launch
robot_interface/meshes/: buildbox.STL
robot_interface/src/: robot_trajectory_interface.cpp
robot_interface/srv/: FollowEdge.srv  IO_Control.srv
robot_interface/yaml/: kinematics.yaml  robot_trajectory_interface.yaml
robot_wrapper/: CMakeLists.txt  package.xml
robot_wrapper/launch/: robot_wrapper.launch
robot_wrapper/nodes/: listener.py  robot_wrapper.py  show_trajectory.py  transmitter.py
robot_wrapper/yaml/: receiver.yaml  robot_interface.yaml  transmitter.yaml
