<?xml version="1.0"?>
<package>
  <name>robot_wrapper</name>
  <version>1.0.0</version>
  <description>
    The robot_wrapper package is an interface between ROS and the DENSO control
    script. Note that this package will be deprecated once the system is fully
    converted into ROS.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="boooooosh@gmail.com">boooooosh</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>blackbox</build_depend>
  <build_depend>cam_kinect</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>blackbox</run_depend>
  <run_depend>cam_kinect</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
